--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ img { max-width: 100%; max-height: 100%; }
 .el-button:before { margin-right: 5px; font-size: 24px; vertical-align: middle; }
 .right-btn { float: right; margin: -52px 12px 0 0; }
 .content { padding: 4px 10px; line-height: 22px; font-size: 12px; border: 1px solid #ebebeb; border-radius: 3px; background-color: #f6f6f1; }
+.hot-keyword { background-color: #FD0; }
 </style>
 </head>
 <body>
