--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ img { max-width: 100%; max-height: 100%; }
     <p>统一并不是斗争的结束，而是另一种斗争的开始。</p>
     <p>神农、轩辕两个部族经过痛苦的斗争，逐渐能和平相处，可一切的矛盾犹如休眠的火山，随时会爆发。</p>
     <p class="盘古">盘古大帝、盘古大帝、盘古、盘古大帝、盘古、盘古大帝、盘古</p>
-    <p><img src="http://img3.doubanio.com/view/subject/l/public/s24931256.jpg" alt="长相思、三皇五帝事情的故事" title="盘古大帝"></p>
+    <p><img src="./demo.jpg" alt="长相思、三皇五帝事情的故事" title="盘古大帝"></p>
 </div>
 </div>
 <script src="http://unpkg.com/vue@2.5.17/dist/vue.js"></script>
