remove demo pic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="http://unpkg.com/element-ui/lib/theme-chalk/index.css">
 <style>
 * { box-sizing: border-box; }
-img { max-width: 100%; max-height: 100%; }
 .container { margin: 0 auto 50px; max-width: 1000px; }
 .el-button { padding: 3px 12px; }
 .el-button:before { margin-right: 5px; font-size: 24px; vertical-align: middle; }
@@ -16,6 +15,7 @@ img { max-width: 100%; max-height: 100%; }
 .content { padding: 4px 10px; line-height: 22px; font-size: 12px; border: 1px solid #ebebeb; border-radius: 3px; background-color: #f6f6f1; }
 .hot-keyword { background-color: #FD0; }
 .el-table + .el-table { margin-top: 20px; }
+img { display: block; margin: 10px auto; width: 400px; height: 200px; background-color: #d4edda; border: 1px solid #c3e6cb; }
 </style>
 </head>
 <body>
@@ -84,7 +84,7 @@ img { max-width: 100%; max-height: 100%; }
     <p>统一并不是斗争的结束，而是另一种斗争的开始。</p>
     <p>神农、轩辕两个部族经过痛苦的斗争，逐渐能和平相处，可一切的矛盾犹如休眠的火山，随时会爆发。</p>
     <p class="盘古">盘古大帝、盘古大帝、盘古、盘古大帝、盘古、盘古大帝、盘古</p>
-    <p><img src="./demo.jpg" alt="长相思、三皇五帝事情的故事" title="盘古大帝"></p>
+    <p><img src="about:blank" alt="长相思、盘古、三皇五帝时期的故事" title="盘古大帝"></p>
 </div>
 </div>
 <script src="http://unpkg.com/vue@2.5.17/dist/vue.js"></script>
