--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 .content { padding: 4px 10px; line-height: 22px; font-size: 12px; border: 1px solid #ebebeb; border-radius: 3px; background-color: #f6f6f1; }
 .hot-keyword { background-color: #FD0; }
 .el-table + .el-table { margin-top: 20px; }
-img { display: block; margin: 10px auto; width: 400px; height: 200px; background-color: #d4edda; border: 1px solid #c3e6cb; }
+img { display: block; margin: 10px auto; width: 300px; height: 200px; background-color: #d4edda; border: 1px solid #c3e6cb; }
 </style>
 </head>
 <body>
 <div id="app" class="container">
 <h1>关键词加超链接</h1>
+<h2>Add hyperlinks from keywords</h2>
+<a href="http://github.com/wuliupo/keyword-linker" class="el-button el-button--default el-button--small right-btn el-icon-circle-plus-outline">Github</a>
 <h3>关键词</h3>
 <button class="el-button el-button--default el-button--small right-btn el-icon-circle-plus-outline" @click="add">添加</button>
 <table class="el-table el-table--fit el-table--striped el-table--border el-table--enable-row-hover el-table--enable-row-transition el-table--small" cellspacing="0" cellpadding="0" border="0" class="el-table__body">
