add comment in demo

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ img { display: block; margin: 10px auto; width: 300px; height: 200px; background
     <p>神农炎帝遍尝百草，以身试药，为世人解除疾苦，受万民爱戴，被天下人尊为医祖。因为神农炎帝，大荒形成了三足鼎立的局面。</p>
     <p>神农炎帝的逝世打破了三足鼎立的局面，轩辕黄帝雄才伟略，经过和神农族的激烈斗争，统一了中原。</p>
     <p>统一并不是斗争的结束，而是另一种斗争的开始。</p>
+    <!--这是一段注释 盘古大帝 盘古-->
     <p>神农、轩辕两个部族经过痛苦的斗争，逐渐能和平相处，可一切的矛盾犹如休眠的火山，随时会爆发。</p>
     <p class="盘古">盘古大帝、盘古大帝、盘古、盘古大帝、盘古、盘古大帝、盘古</p>
     <p><img src="about:blank" alt="长相思、盘古、三皇五帝时期的故事" title="盘古大帝"></p>
