--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ img { display: block; margin: 10px auto; width: 300px; height: 160px; background
 <div v-else id="content" ref="content" class="content" v-html="content || text">
     <p data-tips="盘古大帝">宇宙混沌，鸿蒙初开，<a title="盘古大帝" href="#盘古大帝">盘古大帝劈开了天地</a>。</p>
     <p>那时候，神族、人族、妖族混居于天地之间。天与地的距离并非遥不可及，人居于陆地，神居于神山，人可以通过天梯见神。</p>
-    <p>盘古大帝有三位情如兄妹的下属，神力最高的是一位女子，因年代过于久远，名字已不可考，只知道她后来建立了华胥国1，后世尊称她为华胥氏。另外两位是男子：神农氏，驻守中原，守四方安宁；高辛氏，驻守东方，守护日出之地汤谷2和万水之眼归墟3。</p>
+    <p>盘古大帝有三位情如兄妹的下属，神力最高的是一位女子，因年代过于久远，名字已不可考，只知道她后来建立了华胥国，后世尊称她为华胥氏。另外两位是男子：神农氏，驻守中原，守四方安宁；高辛氏，驻守东方，守护日出之地汤谷和万水之眼归墟。</p>
     <p>盘古大帝仙逝后，天下战火频起，华胥氏厌倦了无休无止的战争，避世远走，创建了美丽祥和的华胥国。可她之所以被后世铭记，并不是因为华胥国，而是因为她的儿子伏羲、女儿女娲。</p>
     <p>伏羲、女娲恩威并重，令天下英雄敬服，制止了兵戈之争。伤痕累累的大荒迎来太平，渐渐恢复了生机。</p>
     <p>伏羲、女娲被尊为伏羲大帝、女娲大帝。</p>
